ExampleYAMLfileDefaultBackendIngress.yaml
apiVersion: v1
kind: Service
metadata: 
  name: default-http-backend
spec: 
  selector: 
    app: default-response-app
  ports: 
    - protocol:  TCP
      port:  80
      targetPort:  8080
