ExampleYAMLConfiguringTLSCertificate.yaml
apiVersion: networking.k8s.io/vibeta1
kind: Ingress
metadata: 
  name: tls-example-ingress
spec: 
  rules: 
  - host: myapp.com
    http:
      paths: 
        backend:
          serviceName: myapp-internal-service
          servicePort: 8080
