ExampleYAMLfileIngress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
    name: my-app-ingress
spec: 
    rules: 
    - host: myapp.com 
      http: 
        paths:
        - backend: 
            serviceName: my-app-internal-service
            servicePort: 8080
