ExampleYAMLfileMultiplePathsForSameHost.yaml
apiVersion: networking.k8s.io/vibeta1
kind: Ingress
metadata: 
  name: simple-fanout-example
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
  - host: myapp.com
    http:
      paths: 
      - path: /analytics
        backend:
          serviceName: analytics-service
          servicePort: 3000
      - path: /shopping
        backend:
          serviceName: shopping-service
          servicePort: 8080
