ExampleYAMlfileMultiplePathsForMultipleSubDomainsOrDomains.yaml
apiVersion: networking.k8s.io/vibeta1
kind: Ingress
metadata: 
  name: name-virtual-host-ingress
spec: 
  rules: 
  - host: analytics.myapp.com
    http:
      paths: 
        backend:
          serviceName: analytics-service
          servicePort: 3000
  - host: shopping.myapp.com
    http:
      paths:
        backend:
          serviceName: shopping-service
          servicePort: 8080
